--- a/public/styles.css
+++ b/public/styles.css
@@ -27243,10 +27243,6 @@ video {
   width: max-content;
 }
 
-.w-w {
-  width: 400px;
-}
-
 .z-0 {
   z-index: 0;
 }
@@ -31287,6 +31283,32 @@ video {
 
 .animate-bounce {
   animation: bounce 1s infinite;
+}
+
+.card{
+  --tw-bg-opacity: 1;
+  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+  height: auto;
+  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  text-align: center;
+  width: 18rem;
+}
+
+.banner{
+  display: flex;
+  padding: 0.25rem;
+  z-index: 10;
+}
+
+.team-card{
+  --tw-bg-opacity: 1;
+  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+  height: 18rem;
+  margin: auto;
+  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  width: 18rem;
 }
 
 @media (min-width: 640px) {
@@ -57973,10 +57995,6 @@ video {
     width: -webkit-max-content;
     width: -moz-max-content;
     width: max-content;
-  }
-
-  .sm\:w-w {
-    width: 400px;
   }
 
   .sm\:z-0 {
@@ -88677,10 +88695,6 @@ video {
     width: max-content;
   }
 
-  .md\:w-w {
-    width: 400px;
-  }
-
   .md\:z-0 {
     z-index: 0;
   }
@@ -119377,10 +119391,6 @@ video {
     width: -webkit-max-content;
     width: -moz-max-content;
     width: max-content;
-  }
-
-  .lg\:w-w {
-    width: 400px;
   }
 
   .lg\:z-0 {
@@ -150081,10 +150091,6 @@ video {
     width: max-content;
   }
 
-  .xl\:w-w {
-    width: 400px;
-  }
-
   .xl\:z-0 {
     z-index: 0;
   }
@@ -180781,10 +180787,6 @@ video {
     width: -webkit-max-content;
     width: -moz-max-content;
     width: max-content;
-  }
-
-  .\32xl\:w-w {
-    width: 400px;
   }
 
   .\32xl\:z-0 {
